--- a/src/main/resources/templates/html_resources/product.html
+++ b/src/main/resources/templates/html_resources/product.html
@@ -7,7 +7,17 @@
     <title>Complex Gym</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css_resources/product.css}">
+<style>
+.product_name {
+    display: inline-block;
+    max-width: 200px;      /* hoặc tùy chỉnh theo layout của bạn */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+}
 
+</style>
 </head>
 
 <body>
